# tauri-bindgen

./: .gitignore  Cargo.toml  Chars.elm  Chars.res  LICENSE_MIT  README.md  Records.elm  TODO.md  Variants.elm  book.toml  chars.js  chars.rs  chars.ts  format.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json5  resources.rs  resources.ts  roundtrip.js  roundtrip.rs  schema.json  simple.js  small-anonymous.rs  test.rs  test.wit  the-world.js  the-world.ts  typos.toml  unused-types.rs  unused-types.ts  update-fixtures.sh
crates/abi/: Cargo.toml
crates/abi-derive/: Cargo.toml
crates/abi-derive/src/: lib.rs  readable.rs  writable.rs
crates/abi-derive/tests/: readable.rs  roundtrip.rs  writable.rs
crates/abi/src/: lib.rs  readable_impl.rs  writable_impl.rs
crates/bindgen-core/: Cargo.toml
crates/bindgen-core/src/: hash.rs  lib.rs  postprocess.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gen-guest-dart/: Cargo.toml
crates/gen-guest-dart/src/: lib.rs
crates/gen-guest-dart/tests/: codegen.rs  flegs.ts  floats.ts  lists.ts  records.ts  resources.ts  strings.ts  variants.ts
crates/gen-guest-js/: Cargo.toml
crates/gen-guest-js/src/: lib.rs
crates/gen-guest-js/tests/: anon.js  chars.js  codegen.rs  conventions.js  empty.js  flags.js  flegs.js  floats.js  integers.js  lists.js  many-arguments.js  manyarg.js  multi-return.js  records.js  resources.js  simple-functions.js  simple-lists.js  simple.js  small-anonymous.js  streams.js  strings.js  unions.js  variants.js
crates/gen-guest-rescript/: Cargo.toml
crates/gen-guest-rescript/src/: lib.rs
crates/gen-guest-rescript/tests/: Chars.res  Conventions.res  Floats.res  Integers.res  Lists.res  ManyArguments.res  MultiReturn.res  Records.res  SimpleFunctions.res  SimpleLists.res  SmallAnonymous.res  Strings.res  Unions.res  Variants.res  codegen.rs
crates/gen-guest-rust/: Cargo.toml
crates/gen-guest-rust/src/: lib.rs  macro.rs
crates/gen-guest-rust/tests/: anon.rs  char.rs  chars.rs  codegen.rs  conventions.rs  empty.rs  flegs.rs  floats.rs  integers.rs  lists.rs  many-arguments.rs  manyarg.rs  multi-return.rs  records.rs  resources.rs  simple-functions.rs  simple-lists.rs  simple.rs  small-anonymous.rs  streams.rs  strings.rs  unions.rs  variants.rs
crates/gen-guest-ts/: Cargo.toml
crates/gen-guest-ts/src/: lib.rs
crates/gen-guest-ts/tests/: anon.ts  char.ts  chars.ts  codegen.rs  conventions.ts  empty.ts  flags.ts  flegs.ts  floats.ts  integers.ts  lists.ts  many-arguments.ts  manyarg.ts  multi-return.ts  records.ts  resources.ts  simple-functions.ts  simple-lists.ts  simple.ts  small-anonymous.ts  streams.ts  strings.ts  unions.ts  variants.ts
crates/gen-host/: Cargo.toml
crates/gen-host/src/: lib.rs
crates/gen-host/tests/: anon.rs  char.rs  chars.rs  check.rs  codegen-async.rs  codegen-sync.rs  codegen.rs  conventions.rs  empty.rs  flegs.rs  floats.rs  integers.rs  lists.rs  many-arguments.rs  manyarg.rs  multi-return.rs  records.rs  resources.rs  simple-functions.rs  simple-lists.rs  simple.rs  small-anonymous.rs  streams.rs  strings.rs  unions.rs  variants.rs
crates/gen-host/tests/async/: chars.rs  conventions.rs  empty.rs  flegs.rs  floats.rs  integers.rs  lists.rs  many-arguments.rs  multi-return.rs  records.rs  resources.rs  simple-functions.rs  simple-lists.rs  small-anonymous.rs  strings.rs  unions.rs  variants.rs
crates/gen-host/tests/sync/: chars.rs  conventions.rs  empty.rs  flegs.rs  floats.rs  integers.rs  lists.rs  many-arguments.rs  multi-return.rs  records.rs  resources.rs  simple-functions.rs  simple-lists.rs  small-anonymous.rs  strings.rs  unions.rs  variants.rs
crates/gen-js/: Cargo.toml  package.json  perf.ts  pnpm-lock.yaml
crates/gen-js/src/: lib.rs
crates/gen-js/src/js/: de_bool.js  (+42 more)
crates/gen-markdown/: Cargo.toml
crates/gen-markdown/src/: lib.rs
crates/gen-markdown/tests/: chars.md  conventions.md  empty.md  flegs.md  floats.md  integers.md  lists.md  many-arguments.md  multi-return.md  records.md  resources.md  simple-functions.md  simple-lists.md  small-anonymous.md  streams.md  strings.md  unions.md  variants.md
crates/gen-rust/: Cargo.toml
crates/gen-rust/src/: lib.rs
crates/guest-rust/: Cargo.toml
crates/guest-rust-macro/: Cargo.toml
crates/guest-rust-macro/src/: lib.rs
crates/guest-rust/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: lib.rs
crates/ipc-router-wip/: Cargo.toml
crates/ipc-router-wip/src/: lib.rs
crates/rollup-plugin/: .gitignore  Cargo.toml  bindgen.d.ts  bindgen.js  index.cjs  index.d.ts  index.js  index.mjs  index.ts  package.json  pnpm-lock.yaml  process.d.ts  process.js  rollup.config.js  tsconfig.json
crates/rollup-plugin/src/: lib.rs
crates/rust-macro-shared/: Cargo.toml
crates/rust-macro-shared/src/: lib.rs
crates/wit-parser/: Cargo.toml  ast.json
crates/wit-parser/_src/: error.rs  util.rs
crates/wit-parser/fuzz/: Cargo.toml
crates/wit-parser/src/: ast.rs  error.rs  lex.rs  lib.rs  parse.rs  test.wit  typecheck.rs  util.rs
crates/wit-parser/tests/: generate-json-schema.rs
examples/basic/: Cargo.toml  Trunk.toml  greet.wit  index.html
examples/basic/src/: app.rs  main.rs
examples/basic/src-tauri/: Cargo.toml
examples/greet/: Cargo.toml  greet.wit  greet2.wit  index.html  style.css
examples/greet/src/: app.rs  greet.js  greet2.rs  main.rs
examples/greet/src-tauri/: Cargo.toml  tauri.conf.json
examples/test/: Cargo.toml  index.html  styles.css  tauri-log.wit  world.wit
examples/test/src/: main.rs  roundtrip.js  roundtrip.rs  roundtrip_js.rs  tauri_log.rs
examples/test/src-tauri/: Cargo.toml  ci.tauri.conf.json  tauri.conf.json
playground/: Cargo.toml  index.html  netlify.toml  rust-toolchain.toml
playground/editor/: .gitignore  README.md  index.ts  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
playground/editor/src/: index.ts  wit.grammar  wit.ts
playground/netlify/functions/: ping.js
playground/src/: main.rs
simple/: Cargo.toml
simple/src/: codegen.rs  error.rs  lex.rs  lib.rs  parse.rs  typecheck.rs  util.rs
(+93 files in other folders)
