[package]
name = "vanilla-example"
version = "0.1.0"
authors = ["Philip Peterson <pc.peterso@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Node", "Text"] }
wasm-logger = "0.2.0"
log.workspace = true
wit-parser.workspace = true
miette.workspace = true
tauri-bindgen-gen-host.workspace = true
tauri-bindgen-gen-guest-rust.workspace = true
tauri-bindgen-gen-guest-js.workspace = true
tauri-bindgen-gen-guest-ts.workspace = true
tauri-bindgen-gen-markdown.workspace = true
tauri-bindgen-core.workspace = true