[workspace]

[package]
name = "vanilla-example"
version = "0.1.0"
authors = ["Philip Peterson <pc.peterso@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Node", "Text"] }
wasm-logger = "0.2.0"
miette = { version = "5.10.0", features = ["fancy"] }
log = { version = "0.4.20", features = [ "kv_unstable", "kv_unstable_std" ] }
tauri-bindgen-core = { path = "../crates/core" }
tauri-bindgen-gen-host = { path = "../crates/gen-host" }
tauri-bindgen-gen-markdown = { path = "../crates/gen-markdown" }
tauri-bindgen-gen-guest-rust = { path = "../crates/gen-guest-rust" }
tauri-bindgen-gen-guest-ts = { path = "../crates/gen-guest-ts" }
tauri-bindgen-gen-guest-js = { path = "../crates/gen-guest-js" }
wit-parser = { path = "../crates/wit-parser" }
pulldown-cmark = { version = "0.10", default-features = false }
