[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
logos = "0.12.1"
thiserror.workspace = true
distance = "0.4.0"

[dev-dependencies]
pretty_assertions = "1.3.0"