[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
logos = "0.12.1"
thiserror.workspace = true
distance = "0.4.0"
quote = "1.0.23"
proc-macro2 = "1.0.51"
syn = "1.0.109"
heck.workspace = true
bitflags = "1.3.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
prettyplease = "0.1.23"
