[package]
name = "tauri-bindgen-abi-derive"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
test = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.108", features = ["full"] }

[dev-dependencies]
tauri-bindgen-abi = { path = "../abi" }
bitflags.workspace = true