[package]
name = "tauri-bindgen-abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
thiserror = "1.0.38"
tauri-bindgen-abi-derive = { path = "../abi-derive", optional = true }

[dev-dependencies]
proptest = "1.0"
proptest-derive = "0.2.0"
tauri-bindgen-abi-derive = { path = "../abi-derive" }

[features]
default = ["derive"]

# Provide derive(Writable, Readable) macros.
derive = ["tauri-bindgen-abi-derive"]