[package]
name = "tauri-bindgen-abi"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
thiserror.workspace = true
tauri-bindgen-abi-derive = { path = "../abi-derive", optional = true }

[dev-dependencies]
proptest = "1.0"
proptest-derive = "0.2.0"
tauri-bindgen-abi-derive = { path = "../abi-derive" }

[features]
default = ["derive"]

# Provide derive(Writable, Readable) macros.
derive = ["tauri-bindgen-abi-derive"]