[package]
name = "tauri-bindgen-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

[dependencies]
wit-parser = { path = "../wit-parser" }
blake3 = { version = "1.3.3", features = ["rayon"] }
memmap2 = "0.5.8"
rayon = "1.6.1"
hex = "0.4.3"
thiserror = "1.0.38"
miette = { version = "5.5.0", features = ["fancy"] }
bitflags = "1.3.2"
