[package]
name = "tauri-bindgen-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

[dependencies]
wit-parser = { path = "../wit-parser" }
blake3 = { version = "1.3.3", features = ["rayon"]}
memmap2 = "0.5.8"
rayon = "1.6.1"
hex = "0.4.3"
thiserror = "1.0.38"
miette = { version = "5.5.0", features = ["fancy"] }
bitflags = "1.3.2"

[features]
miri_test = ["blake3/no_neon", "blake3/no_avx2", "blake3/no_sse2", "blake3/no_sse41", "blake3/no_avx512"]