[package]
name = "tauri-bindgen-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
wit-parser.workspace = true
blake3 = { version = "1.3.3", features = ["rayon"]}
memmap2 = "0.5.8"
rayon = "1.6.1"
hex = "0.4.3"
thiserror.workspace = true
miette.workspace = true
bitflags.workspace = true

[features]
# miri doesn't allow the hardware acceleration, so we need to disable all blake3 SIMD features
miri_test = ["blake3/no_neon", "blake3/no_avx2", "blake3/no_sse2", "blake3/no_sse41", "blake3/no_avx512"]