[package]
name = "tauri-bindgen-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-parser.workspace = true
proc-macro2 = "1.0.51"