[package]
name = "tauri-bindgen-gen-guest-dart"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri-bindgen-core.workspace = true
wit-parser.workspace = true
heck.workspace = true
clap = { workspace = true, optional = true }

[features]
cli = ["clap"]
