[package]
name = "tauri-bindgen-gen-guest-js"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri-bindgen-core.workspace = true
wit-parser.workspace = true
heck.workspace = true
clap = { workspace = true, optional = true }
quote = "1.0.23"
proc-macro2 = "1.0.51"
syn = "1.0.107"
prettyplease = "0.1.23"

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
cli = ["clap"]
