[package]
name = "tauri-bindgen-gen-guest-js"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri-bindgen-core.workspace = true
wit-parser.workspace = true
heck.workspace = true
clap = { workspace = true, optional = true }
tauri-bindgen-gen-js = { path = "../gen-js" }

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
cli = ["clap"]
