[package]
name = "tauri-bindgen-gen-guest-rescript"
version.workspace = true
edition.workspace = true

[dependencies]
tauri-bindgen-core.workspace = true
wit-parser.workspace = true
heck.workspace = true
clap = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true

[features]
clap = ["dep:clap"]
