[package]
name = "tauri-bindgen-gen-guest-rust"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri-bindgen-core.workspace = true
tauri-bindgen-gen-rust = { path = "../gen-rust" }
wit-parser.workspace = true
heck.workspace = true
clap = { workspace = true, optional = true }
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
prettyplease = "0.2.6"
log.workspace = true

[dev-dependencies]
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.36"
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.63" 
tauri-bindgen-guest-rust = { path = "../guest-rust" }
serde = { version = "1.0.163", features = ["derive"] }
pretty_assertions = "1.3.0"

[features]
cli = ["clap"]
