[package]
name = "tauri-bindgen-gen-guest-rust"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri-bindgen-core.workspace = true
tauri-bindgen-gen-rust = { path = "../gen-rust" }
wit-parser.workspace = true
heck.workspace = true
clap = { workspace = true, optional = true }
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
prettyplease = "0.2.15"
log.workspace = true

[dev-dependencies]
wasm-bindgen = { version = "0.2.90", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.40"
serde-wasm-bindgen = "0.6.3"
js-sys = "0.3.67" 
tauri-bindgen-guest-rust = { path = "../guest-rust" }
serde = { version = "1.0.196", features = ["derive"] }
pretty_assertions = "1.4.0"

[features]
cli = ["clap"]
