[package]
name = "tauri-bindgen-gen-guest-ts"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

[dependencies]
tauri-bindgen-core = { path = "../bindgen-core" }
wit-parser = { path = "../wit-parser" }
heck =  { version = "0.4", features = ["unicode"] }
clap = { version = "4.0.32", features = ["derive"], optional = true }

[features]
cli = ["clap"]
