[package]
name = "tauri-bindgen-gen-host"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri-bindgen-gen-rust = { path = "../gen-rust" }
tauri-bindgen-core.workspace = true
wit-parser.workspace = true
heck.workspace = true
clap = { workspace = true, optional = true }

[dev-dependencies]
tauri-bindgen-host = { path = "../host" }
serde = { version = "1.0.152", features = ["derive"] }

[target."cfg(miri)".dev-dependencies]
tauri-bindgen-core = { workspace = true, features = ["miri_test"] }

[features]
cli = ["clap"]