[package]
name = "tauri-bindgen-gen-host"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri-bindgen-core.workspace = true
tauri-bindgen-gen-rust = { path = "../gen-rust" }
wit-parser.workspace = true
heck.workspace = true
quote = "1.0.23"
proc-macro2 = "1.0.52"
syn = "1.0.109"
prettyplease = "0.1.24"
clap = { workspace = true, optional = true }

[dev-dependencies]
tauri-bindgen-host = { path = "../host" }
serde = { version = "1.0.155", features = ["derive"] }
pretty_assertions = "1.3.0"

[features]
cli = ["clap"]