[package]
name = "tauri-bindgen-gen-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-bindgen-core.workspace = true
wit-parser.workspace = true
heck.workspace = true
log.workspace = true
bitflags.workspace = true