[package]
name = "tauri-bindgen-gen-markdown"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

[lib]
doctest = false
test = false

[dependencies]
heck =  { version = "0.4", features = ["unicode"] }
pulldown-cmark = { version = "0.9", default-features = false }
clap = { version = "3.2.23", features = ["derive"], optional = true }
tauri-bindgen-core = { path = "../bindgen-core" }
wit-parser = { path = "../wit-parser" }

[features]
cli = ["clap"]