[package]
name = "tauri-bindgen-gen-markdown"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
heck.workspace = true
pulldown-cmark = { version = "0.9", default-features = false }
clap = { workspace = true, optional = true }
wit-parser.workspace = true

[features]
cli = ["clap"]