[package]
name = "tauri-bindgen-gen-rust"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-parser.workspace = true
heck.workspace = true
quote = "1.0.23"
proc-macro2 = "1.0.51"
syn = "1.0.109"
bitflags.workspace = true