[package]
name = "tauri-bindgen-gen-rust"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-parser.workspace = true
heck.workspace = true
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
bitflags.workspace = true
log.workspace = true
