[package]
name = "tauri-bindgen-guest-rust"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
tauri-bindgen-guest-rust-macro = { path = "../guest-rust-macro" }
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.61" 
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.4.5"
serde.workspace = true
# tauri-bindgen-abi = { path = "../abi", features = ["derive"] }
# base64 = "0.21.0"
tracing = "0.1.37"
