[package]
name = "tauri-bindgen-guest-rust"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
tauri-bindgen-guest-rust-macro = { path = "../guest-rust-macro" }
wasm-bindgen-futures = "0.4.36"
js-sys = "0.3.63" 
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5.0"
serde.workspace = true
tracing = "0.1.37"
