[package]
name = "tauri-bindgen-guest-rust"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
tauri-bindgen-guest-rust-macro = { path = "../guest-rust-macro" }
wasm-bindgen-futures = "0.4.36"
wasm-bindgen = "0.2.86"
serde.workspace = true
tracing = "0.1.37"
postcard = { version = "1.0.4", features = ["alloc"]}
heapless = "0.7.16"
js-sys = "0.3.63"

[dependencies.web-sys]
version = "0.3.63"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]