[package]
name = "tauri-bindgen-host"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
tauri-bindgen-host-macro = { path = "../host-macro" }
async-trait = "0.1.63"
tauri = "1.2.4"
serde = { version = "1.0.152", features = ["derive"] }
tracing = { version = "0.1.37", features = ["log", "log-always"] }
anyhow = "1.0.68"
