[package]
name = "tauri-bindgen-host"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
tauri-bindgen-host-macro = { path = "../host-macro" }
async-trait = "0.1.66"
tauri = "1.2.4"
tracing = { version = "0.1.37", features = ["log", "log-always"] }
anyhow = "1.0.69"
tauri-bindgen-abi = { path = "../abi", features = ["derive"] }
base64 = "0.21.0"
