[package]
name = "ipc-router-wip"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde.workspace = true
log.workspace = true
postcard = { version = "1.0.4", features = ["alloc"] }
tauri = "1.4.0"
url = "2.4.0"
