[package]
edition = "2021"
name = "rollup-plugin-tauri-bindgen"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.1", default-features = false, features = ["napi4"] }
napi-derive = "2.9.1"
tauri-bindgen-gen-guest-js.workspace = true
tauri-bindgen-core.workspace = true
wit-parser.workspace = true

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
