[package]
name = "wit-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
fst = "0.4.7"

[dependencies]
thiserror = "1.0.38"
id-arena = "2.2.1"
codespan-reporting = "0.11.1"
miette = { version = "5.5.0", features = ["fancy"] }
distance = "0.4.0"

[dev-dependencies]
pretty_assertions = "1.3.0"