[package]
name = "wit-parser"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror.workspace = true
id-arena = "2.2.1"
codespan-reporting = "0.11.1"
miette.workspace = true
distance = "0.4.0"
log.workspace = true

[dev-dependencies]
pretty_assertions = "1.3.0"
