[package]
name = "tauri-app-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59" 
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "abd556cbc02047042dad2ebd04405e455a9b11b2", features = ["suspense", "hydrate"] }
tauri-bindgen-guest-rust = { path = "../../crates/guest-rust" }
log = "0.4.17"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"

[features]
ssg = ["sycamore/ssr"]

[workspace]
members = ["src-tauri"]
